--- a/greenmtnmovers/package.json
+++ b/greenmtnmovers/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "html-react-parser": "^4.2.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
