--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-masonry-css": "^1.0.16",
     "react-parallax": "^3.5.1",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.33.2",
     "tailwindcss": "3.3.3"
   }
 }
