--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "html-react-parser": "^4.2.2",
-    "next": "13.4.19",
+    "next": "^14.2.10",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-alice-carousel": "^2.7.1",
